--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ HELP.md
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+target/classes/
+target/test-classes/
 ### STS ###
 .apt_generated
 .classpath
